--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ authors = [
 ]
 dependencies = [
     "numpy>=1.26.4",
-    "scipy>=1.12.0",
+    "scipy>=1.13.0",
+    "matplotlib>=3.9.0",
 ]
 requires-python = "==3.12.*"
 readme = "README.md"
