--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "numpy>=1.26.4",
     "scipy>=1.13.0",
     "matplotlib>=3.9.0",
+    "pandas>=2.2.2",
+    "pyarrow>=16.1.0",
 ]
 requires-python = "==3.12.*"
 readme = "README.md"
