--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "matplotlib>=3.9.0",
     "pandas>=2.2.2",
     "pyarrow>=16.1.0",
+    "hvplot>=0.10.0",
 ]
 requires-python = "==3.12.*"
 readme = "README.md"
