--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "matplotlib>=3.9.0",
     "pandas>=2.2.2",
     "pyarrow>=16.1.0",
-    "hvplot>=0.10.0",
+    "jupyterlab>=4.2.1",
+    "bokeh>=3.4.1",
 ]
 requires-python = "==3.12.*"
 readme = "README.md"
