--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,9 @@ dependencies = [
     "pandas>=2.2.2",
     "bokeh>=3.4.1",
     "pyarrow>=16.1.0",
+    "imagecodecs[all]>=2024.6.1",
 ]
-requires-python = "==3.12.*"
+requires-python = ">=3.12"
 readme = "README.md"
 license = { text = "GPL-3.0-or-later" }
 
