--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,14 @@ authors = [
     { name = "Julian Nowaczek", email = "jnowaczek@users.noreply.github.com" },
 ]
 dependencies = [
-    "numpy>=1.26.4",
-    "scipy>=1.13.0",
-    "matplotlib>=3.9.0",
+    "numpy>=2.1.0",
+    "scipy>=1.14.1",
+    "matplotlib>=3.9.2",
     "pandas>=2.2.2",
-    "bokeh>=3.4.1",
-    "pyarrow>=16.1.0",
+    "bokeh>=3.5.2",
+    "pyarrow>=17.0.0",
     "imagecodecs[all]>=2024.6.1",
+    "requests>=2.32.3",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
