Remove EXIF and thumbnails from downloaded TIFFs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pyarrow>=17.0.0",
     "imagecodecs[all]>=2024.6.1",
     "requests>=2.32.3",
+    "wand>=0.6.13",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
