--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,15 +6,18 @@ authors = [
     { name = "Julian Nowaczek", email = "jnowaczek@users.noreply.github.com" },
 ]
 dependencies = [
-    "numpy>=2.1.1",
+    "numpy>=2.1.2",
     "scipy>=1.14.1",
     "matplotlib>=3.9.2",
     "pandas>=2.2.3",
-    "bokeh>=3.5.2",
+    "bokeh>=3.6.0",
     "pyarrow>=17.0.0",
     "imagecodecs[all]>=2024.9.22",
     "requests>=2.32.3",
     "wand>=0.6.13",
+    "hvplot>=0.11.0",
+    "traitlets>=5.14.3",
+    "dask>=2024.10.0",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
