--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "wand>=0.6.13",
     "hvplot>=0.11.0",
     "traitlets>=5.14.3",
-    "dask>=2024.10.0",
+    "dask[distributed]>=2024.10.0",
+    "zstandard>=0.23.0",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
