--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "zstandard>=0.23.0",
     "asyncssh>=2.18.0",
     "paramiko>=3.5.0",
+    "lmfit>=1.3.2",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
