--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "asyncssh>=2.18.0",
     "paramiko>=3.5.0",
     "lmfit>=1.3.2",
+    "panel>=1.6.1",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
@@ -35,3 +36,8 @@ gen_synth_data = "estimation_comparison.data_collection.scripts.gen_synth_data:m
 [tool.pdm]
 distribution = true
 
+
+[dependency-groups]
+dev = [
+    "watchfiles>=1.0.4",
+]
