--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "paramiko>=3.5.0",
     "lmfit>=1.3.2",
     "panel>=1.6.1",
+    "numdifftools>=0.9.41",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
