--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "lmfit>=1.3.2",
     "panel>=1.6.1",
     "numdifftools>=0.9.41",
+    "scikit-learn>=1.6.1",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
