--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,4 +43,6 @@ distribution = true
 dev = [
     "watchfiles>=1.0.4",
     "wat>=0.6.0",
+    "pandas-stubs>=2.3.0.250703",
+    "scipy-stubs>=1.16.0.2",
 ]
